# termin-env

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DEPENDENCY_GRAPH.md  build-and-install-cpp.sh  build-and-install.ps1  build-and-install.sh  clean-all.ps1  clean-all.sh  make-termin.sh
examples/webscene/: main.py
examples/webscene/static/: index.html
termin-components-collision/: CMakeLists.txt
termin-components-collision/components/: collider_component.cpp  collider_component.hpp  collider_component_bindings.cpp
termin-components-mesh/: CMakeLists.txt
termin-components-mesh/components/: mesh_component.cpp  mesh_component.hpp  mesh_component_bindings.cpp
