cmake_minimum_required(VERSION 3.16)
project(termin_components_mesh LANGUAGES C CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
option(TERMIN_BUILD_PYTHON "Build Python binding for MeshComponent" OFF)

find_package(termin_base REQUIRED)
find_package(termin_scene REQUIRED)
find_package(termin_inspect REQUIRED)
find_package(termin_mesh REQUIRED)

include(${CMAKE_CURRENT_LIST_DIR}/../termin-modules/cmake/TerminModule.cmake)

termin_add_module(
    NAME termin_components_mesh
    NAMESPACE termin_components_mesh::
    SOURCES components/mesh_component.cpp
    PUBLIC_DEPS tcbase::termin_base termin_scene::termin_scene termin_inspect::termin_inspect tmesh::termin_mesh
    FIND_DEPS termin_base termin_scene termin_inspect termin_mesh
    INSTALL_HEADERS components
)

if(TERMIN_BUILD_PYTHON)
    if(NOT Python_EXECUTABLE)
        if(WIN32)
            set(Python_EXECUTABLE "python")
        else()
            set(Python_EXECUTABLE "python3")
        endif()
    endif()

    find_package(Python 3.8 COMPONENTS Interpreter Development REQUIRED)
    execute_process(
        COMMAND ${Python_EXECUTABLE} -m nanobind --cmake_dir
        OUTPUT_VARIABLE nanobind_DIR
        OUTPUT_STRIP_TRAILING_WHITESPACE
    )
    find_package(nanobind CONFIG REQUIRED)

    nanobind_add_module(_components_mesh_native NB_SHARED components/mesh_component_bindings.cpp)
    target_link_libraries(_components_mesh_native PRIVATE termin_components_mesh)

    if(TERMIN_COMPONENTS_MESH_PYTHON_PREFIX)
        install(TARGETS _components_mesh_native DESTINATION ${TERMIN_COMPONENTS_MESH_PYTHON_PREFIX}/mesh)
    endif()
endif()
